--- a/index.css
+++ b/index.css
@@ -1,3 +1,13 @@
 h1 {
   background-color: cornflowerblue;
+  border-radius: 2px;
+  text-align: center;
+}
+h2{
+  background-color: cornflowerblue;
+  border-radius: 4px;
+  text-align: center;
+}
+img{
+  width:100%;
 }
